# dataplug-fork

./: .gitignore  README.md  pyproject.toml  requirements-native.txt
dataplug/formats/genomics/: sra.py
dataplug/formats/genomics/mgb/: __init__.py  stable.py
dataplug/formats/genomics/mgb/internals/: Makefile  __init__.py  download.py  genie.py  interval.py  libbz2.so.1.0.8  libhts.so.1.20  liblzma.so.5.4.6  libz.so.1.3.1  libzstd.so.1  shims.c
dataplug/formats/genomics/sra/: __init__.py  experimental.py  output.py  stable.py
dataplug/formats/genomics/sra/internals/: Makefile  _loader.py  cdlml_compat.py  cmaps.py  download.py  interval.py  shims.c  sra.py  vdb.py  vdb_types.py
dataplug/formats/genomics/sra/internals/experimental/: cmaps.py  interval.py
dataplug/storage/: picklableS3.py
genie_native/: setup.py
genie_native/genie_native/: __init__.py
native_helpers/mgb_native/: .gitignore  setup.py
native_helpers/sra_native/: setup.py
sra_native/: .gitignore  setup.py
tests/: _local_storage.py  conftest.py  download_big.py  hand.py  speedup_test.py  test_mgb_to_fastq.py  test_s3path.py  test_sra_to_fastq.py  test_sra_walk_multiprocess.py
tests/fixtures/mgb/: SRR19392985.mgb.json
tests/fixtures/sra/: .gitignore
tests/hands/: mgb.py  sra.py
