[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-dataplug"
version = "1.0.0"
authors = [
    { name = "Aitor Arjona", email = "aitor.a98@gmail.com" },
]
description = "Pluggable data partitioning for cloud-native scientific workloads"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha"
]
dependencies = [
    "boto3",
    "botocore",
    "numpy",
    "pandas",
    "pyarrow",
    "smart_open",
    "tqdm",
    "joblib",
]

[project.optional-dependencies]
metabolomics = [
    "pyimzml"
]
geospatial = [
    "laspy",
    "PDAL"
]
sra = ["dataplug-sra-native @ file:./sra_native"]
mgb = ["dataplug-genie-native @ file:./genie_native"]
dev = ["pytest", "moto[s3]"]


[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["dataplug*"]

[tool.setuptools.package-data]
"dataplug.formats.genomics.sra.internals" = ["libncbi-vdb.so", "libshims.so"]
"dataplug.formats.genomics.mgb.internals" = [
    "libgenie.so",
    "libmgbshims.so",
    "libbsc.so*",
    "libzstd.so*",
    "liblzma.so*",
    "libhts.so*",
    "libz.so*",
    "libbz2.so*",
]

[tool.black]
line-length = 119

[project.urls]
"Homepage" = "https://github.com/CLOUDLAB-URV/dataplug"
